--- a/qa327/templates/index.html
+++ b/qa327/templates/index.html
@@ -13,7 +13,7 @@
 <div id="tickets">
 {% for ticket in tickets %}
     <div>
-        <h4>{{ ticket.name }} {{ ticket.price }}</h4>
+        <h4>{{ ticket.name }} {{ ticket.price }} {{ ticket.date }}</h4>
     </div>
 {% endfor %}
 </div>
