--- a/qa327/templates/index.html
+++ b/qa327/templates/index.html
@@ -18,7 +18,7 @@
 {% endfor %}
 </div>
 <h2> Buy Now </h2>
-<div id="buy">
+<div id="buy-form">
     <form method="post">
         <div class="form-group">
             <label for="name">Name of Ticket</label>
