implemented features for R1 and R2

--- a/qa327/templates/index.html
+++ b/qa327/templates/index.html
@@ -5,7 +5,9 @@
 {% endblock %}
 
 {% block content %}
+<p id="balance-paragraph">Balance: ${{ user.balance }}</p>
 <h2 id="welcome-header">Welcome {{ user.name }} !</h2>
+
 
 
 <h2 >Here are all available tickets</h2>
