--- a/qa327/templates/index.html
+++ b/qa327/templates/index.html
@@ -6,19 +6,78 @@
 
 {% block content %}
 <p id="balance-paragraph">Balance: ${{ user.balance }}</p>
-<h2 id="welcome-header">Welcome {{ user.name }} !</h2>
+<h2 id="welcome-header">Welcome {{ user.name }}!</h2>
 
 
 
-<h2 >Here are all available tickets</h2>
+<h2>Here are all available tickets</h2>
 
 <div id="tickets">
-{% for ticket in tickets %}
+    {% for ticket in tickets %}
     <div>
-        <h4>{{ ticket.name }} {{ ticket.price }} {{ ticket.date }}</h4>
+        <h4>Quantity: 1 Owner's email: {{ ticket.email}} Price: ${{ ticket.price }} Expiration Date: {{ ticket.date }} Ticket name: {{ticket.name}}</h4>
     </div>
-{% endfor %}
+    {% endfor %}
 </div>
+
+<h2>Sell now!</h2>
+<div id="sell-form">
+    <form action="sell" method="post">
+        <div class="form-group">
+            <label for="quantity">Quantity:</label>
+            <input class="form-control" name="quantity" id="quantity" required>
+            <label for="name">Name:</label>
+            <input class="form-control" name="name" id="name" required>
+            <label for="price">Price:</label>
+            <input class="form-control" name="price" id="price" required>
+            <label for="expiration_date">Expiration Date(YYYYMMDD):</label>
+            <input class="form-control" name="expiration_date" id="expiration_date" required>
+            <input class="btn btn-sm btn-primary" type="submit" id="btn-submit" value="Sell Now">
+        </div>
+    </form>
+</div>
+
+<h2>Buy now!</h2>
+<div id="buy-form">
+    <form action="/buy" method="post">
+        <div class="form-group">
+            <label for="name">Name:</label>
+            <input class="form-control" name="name" id="name" required>
+            <label for="quantity">Quantity:</label>
+            <input class="form-control" name="quantity" id="quantity" required>
+            <input class="btn btn-sm btn-primary" type="submit" id="btn-submit" value="Buy Now">
+        </div>
+    </form>
+</div>
+
+<h2>Update a current listing.</h2>
+<div id="update-form">
+    <form action ="/update" method="post">
+        <div class="form-group">
+            <h4>The old tickets.</h4>
+            <label for="quantity_old">Quantity of old tickets:</label>
+            <input class="form-control" name="quantity_old" id="quantity_old" required>
+            <label for="name_old">Name of old tickets:</label>
+            <input class="form-control" name="name_old" id="name_old" required>
+            <label for="price_old">Price of old tickets:</label>
+            <input class="form-control" name="price_old" id="price_old" required>
+            <label for="expiration_date_old">Expiration Date(YYYYMMDD)of old tickets:</label>
+            <input class="form-control" name="expiration_date_old" id="expiration_date_old" required>
+            <h4>The new tickets.</h4>
+            <label for="quantity_new">Quantity of new tickets:</label>
+            <input class="form-control" name="quantity_new" id="quantity_new" required>
+            <label for="name_new">Name of new tickets:</label>
+            <input class="form-control" name="name_new" id="name_new" required>
+            <label for="price_new">Price of new tickets:</label>
+            <input class="form-control" name="price_new" id="price_new" required>
+            <label for="expiration_date_new">Expiration Date(YYYYMMDD) of new tickets:</label>
+            <input class="form-control" name="expiration_date_new" id="expiration_date_new" required>
+            <input class="btn btn-sm btn-primary" type="submit" id="btn-submit" value="Update">
+        </div>
+    </form>
+</div>
+
+
 
 <a href='/logout'>logout</a>
 {% endblock %}
