--- a/qa327/templates/index.html
+++ b/qa327/templates/index.html
@@ -7,6 +7,7 @@
 {% block content %}
 <p id="balance-paragraph">Balance: ${{ user.balance }}</p>
 <h2 id="welcome-header">Welcome {{ user.name }}!</h2>
+<h4 id="message-status">{{message}}</h4>
 
 
 
@@ -22,57 +23,57 @@
 
 <h2>Sell now!</h2>
 <div id="sell-form">
-    <form action="sell" method="post">
+    <form action="/sell" method="post">
         <div class="form-group">
-            <label for="quantity">Quantity:</label>
-            <input class="form-control" name="quantity" id="quantity" required>
-            <label for="name">Name:</label>
-            <input class="form-control" name="name" id="name" required>
-            <label for="price">Price:</label>
-            <input class="form-control" name="price" id="price" required>
-            <label for="expiration_date">Expiration Date(YYYYMMDD):</label>
-            <input class="form-control" name="expiration_date" id="expiration_date" required>
-            <input class="btn btn-sm btn-primary" type="submit" id="btn-submit" value="Sell Now">
+            <label for="sell-quantity">Quantity:</label>
+            <input class="form-control" name="sell-quantity" id="sell-quantity" required>
+            <label for="sell-name">Name:</label>
+            <input class="form-control" name="sell-name" id="sell-name" required>
+            <label for="sell-price">Price:</label>
+            <input class="form-control" name="sell-price" id="sell-price" required>
+            <label for="sell-expiration-date">Expiration Date(YYYYMMDD):</label>
+            <input class="form-control" name="sell-expiration-date" id="sell-expiration-date" required>
+            <input class="btn btn-sm btn-primary" type="submit" id="btn-sell-submit" value="Sell Now">
         </div>
     </form>
 </div>
 
-<h2>Buy now!</h2>
+<h2 id="buy-header">Buy now!</h2>
 <div id="buy-form">
     <form action="/buy" method="post">
         <div class="form-group">
-            <label for="name">Name:</label>
-            <input class="form-control" name="name" id="name" required>
-            <label for="quantity">Quantity:</label>
-            <input class="form-control" name="quantity" id="quantity" required>
-            <input class="btn btn-sm btn-primary" type="submit" id="btn-submit" value="Buy Now">
+            <label for="buy-name">Name:</label>
+            <input class="form-control" name="buy-name" id="buy-name" required>
+            <label for="buy-quantity">Quantity:</label>
+            <input class="form-control" name="buy-quantity" id="buy-quantity" required>
+            <input class="btn btn-sm btn-primary" type="submit" id="btn-buy-submit" value="Buy Now">
         </div>
     </form>
 </div>
 
-<h2>Update a current listing.</h2>
+<h2 id="update-header">Update a current listing.</h2>
 <div id="update-form">
     <form action ="/update" method="post">
         <div class="form-group">
             <h4>The old tickets.</h4>
-            <label for="quantity_old">Quantity of old tickets:</label>
-            <input class="form-control" name="quantity_old" id="quantity_old" required>
-            <label for="name_old">Name of old tickets:</label>
-            <input class="form-control" name="name_old" id="name_old" required>
-            <label for="price_old">Price of old tickets:</label>
-            <input class="form-control" name="price_old" id="price_old" required>
-            <label for="expiration_date_old">Expiration Date(YYYYMMDD)of old tickets:</label>
-            <input class="form-control" name="expiration_date_old" id="expiration_date_old" required>
+            <label for="quantity-old">Quantity of old tickets:</label>
+            <input class="form-control" name="quantity-old" id="quantity-old" required>
+            <label for="name-old">Name of old tickets:</label>
+            <input class="form-control" name="name-old" id="name-old" required>
+            <label for="price-old">Price of old tickets:</label>
+            <input class="form-control" name="price-old" id="price-old" required>
+            <label for="expiration-date-old">Expiration Date(YYYYMMDD)of old tickets:</label>
+            <input class="form-control" name="expiration-date-old" id="expiration-date-old" required>
             <h4>The new tickets.</h4>
-            <label for="quantity_new">Quantity of new tickets:</label>
-            <input class="form-control" name="quantity_new" id="quantity_new" required>
-            <label for="name_new">Name of new tickets:</label>
-            <input class="form-control" name="name_new" id="name_new" required>
-            <label for="price_new">Price of new tickets:</label>
-            <input class="form-control" name="price_new" id="price_new" required>
-            <label for="expiration_date_new">Expiration Date(YYYYMMDD) of new tickets:</label>
-            <input class="form-control" name="expiration_date_new" id="expiration_date_new" required>
-            <input class="btn btn-sm btn-primary" type="submit" id="btn-submit" value="Update">
+            <label for="quantity-new">Quantity of new tickets:</label>
+            <input class="form-control" name="quantity-new" id="quantity-new" required>
+            <label for="name-new">Name of new tickets:</label>
+            <input class="form-control" name="name-new" id="name-new" required>
+            <label for="price-new">Price of new tickets:</label>
+            <input class="form-control" name="price-new" id="price-new" required>
+            <label for="expiration-date-new">Expiration Date(YYYYMMDD) of new tickets:</label>
+            <input class="form-control" name="expiration-date-new" id="expiration-date-new" required>
+            <input class="btn btn-sm btn-primary" type="submit" id="btn-update-submit" value="Update">
         </div>
     </form>
 </div>
